feat: 商品标签和类型选择
